--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install -r test-requirements.txt
   - pip install python-coveralls
 # command to run tests
 script:
