--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  - "3.5"
   - "3.6"
   - "3.7"
 # command to install dependencies
@@ -13,3 +12,15 @@ script:
   - py.test # or py.test for Python versions 3.5 and below
 after_success:
   - coveralls   # uploads reports to coveralls.io
+before_deploy:
+  - pip install -r deploy-requirements.txt
+  - python setup.py bdist_wheel
+deploy:
+  provider: pypi
+  user: __token__
+  password: $PYPITOKEN
+  distributions: "sdist bdist_wheel"
+  skip_existing: true  # used since two python versions
+  on:
+    tags: true
+    branch: master  # this is default anyway
