--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_deploy:
 deploy:
   provider: pypi
   user: __token__
-  password: $PYPITOKEN
+  password: PYPITOKEN
   distributions: "sdist bdist_wheel"
   skip_existing: true  # used since two python versions
   on:
